--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".BeeringApp"
         android:allowBackup="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +17,7 @@
         android:theme="@style/Theme.Beering"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".viewmodel.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Beering">
